manifests/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  selector:
      matchLabels:
        app: order-service
  replicas: 1
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: dragomiralin/order-microservice:1.0.0
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
