manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-greetings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - name: microservice
          image: dragomiralin/microservice
