manifests/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-svc-2
spec:
  type: ClusterIP
  selector:
    app: microservice
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 8080
