manifests/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 7000
    targetPort:8080
  type: LoadBalancer
