manifests/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orderdb
  name: orderdb-service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: orderdb
  clusterIP: None
