manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice-svc
spec:
  type: NodePort
  selector:
    app: microservice # This is the app as declared in the deployment.
  ports:
    - name: http
      nodePort: 30000 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 8000 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 8080 # This is the target port
