manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: microservice-svc-2
          servicePort: 8080
